--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,10 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }}
 
+@media screen and (max-width: 767px) {
+.menu.active {
+ color:rgba(64, 75, 191, 1);
+}}
 
 @media screen and (min-width: 768px) {
 .menu {
@@ -174,7 +178,7 @@ img {
   height: 4px;
   background: #4d5ae5;
   border-radius: 2px;
-  margin-top: 21px;
+  margin-top: 22px;
   opacity: 1;
 }
 }
@@ -266,9 +270,19 @@ img {
     display: none;
   }
 }
-@media screen and (max-width: 767px) {
-.menu-container > .sm-list > .item + .item {
-  margin-left: 56px;
+
+@media screen and (min-width: 320px) and (max-width: 479px){
+.menu-container > .sm-list {
+  gap: 36px;
+  margin:0;
+}
+}
+
+
+@media screen and (min-width: 480px) {
+.menu-container > .sm-list {
+  gap: 56px;
+  margin:0;
 }
 }
 
@@ -513,7 +527,7 @@ font-weight: 700;
   }
 }
 
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1199px) {
   .section-no-padding {
     display: none;
   }
@@ -701,19 +715,11 @@ font-weight: 700;
 
 .sm-list {
   display: flex;
-  justify-content: space-between;
   list-style-type: none;
   padding: 0;
-  margin: 0;
-}
+  gap: 24px;
+  margin-top: 12px;}
 
-@media screen and (max-width: 768px) {
-  .menu-container > .sm-list {
-    margin:0;
-  }}
-
-.sm-list {
-    margin-top: 12px;}
 
 .sm-button {
   display: block;
@@ -725,9 +731,6 @@ font-weight: 700;
   padding: 12px;
 }
 
-.sm-button .item + .item {
-  margin-left: 24px;
-}
 
 .sm-icon {
   display: block;
@@ -907,11 +910,13 @@ font-weight: 700;
   .footer-description {
     width: 264px;
     margin-right: 120px;
+    margin-bottom:0;
   }
 }
 @media screen and (min-width: 480px) {
   .footer-sm {
     text-align: center;
+    margin-bottom: 72px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -952,11 +957,7 @@ font-weight: 700;
   padding: 0;
   margin: 0;
 }
-@media screen and (max-width: 767px) {
-  .footer-sm-list {
-    margin-bottom: 72px;
-  }
-}
+
 
 @media screen and (min-width: 768px) {
   .footer-sm-list {
